--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --primary: #1b1b1f; /* Preto sofisticado */
-  --secondary: #ab8b5a; /* Dourado envelhecido */
-  --accent: #d6b17d; /* Dourado claro */
-  --neutral: #2a2a2e; /* Cinza escuro */
-  --background: #f5f5f7; /* Cinza claro */
+@theme {
+  --font-roboto: "Roboto";
+  --font-domine: "Domine";
 }
 
 html {
@@ -13,7 +10,7 @@ html {
 }
 
 body {
-  @apply bg-[#F5F5F7] text-neutral-900;
+  @apply bg-[#F5F5F7] font-domine text-neutral-900;
 }
 
 .gradient-overlay {
